version/1.6/_sources/API/visualization/_autosummary/ansys.aedt.core.visualization.report.field.NearField.rst.txt
NearField
=========

.. currentmodule:: ansys.aedt.core.visualization.report.field

.. autoclass:: NearField

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      NearField.add_cartesian_x_marker
      
      
      NearField.add_cartesian_y_marker
      
      
      NearField.add_limit_line_from_equation
      
      
      NearField.add_limit_line_from_points
      
      
      NearField.add_note
      
      
      NearField.add_trace_characteristics
      
      
      NearField.add_trace_to_report
      
      
      NearField.apply_report_template
      
      
      NearField.create
      
      
      NearField.delete
      
      
      NearField.delete_traces
      
      
      NearField.edit_general_settings
      
      
      NearField.edit_grid
      
      
      NearField.edit_header
      
      
      NearField.edit_legend
      
      
      NearField.edit_x_axis
      
      
      NearField.edit_x_axis_scaling
      
      
      NearField.edit_y_axis
      
      
      NearField.edit_y_axis_scaling
      
      
      NearField.export_config
      
      
      NearField.export_table_to_file
      
      
      NearField.get_solution_data
      
      
      NearField.hide_legend
      
      
      NearField.import_traces
      
      
      NearField.jsonalize_tree
      
      
      NearField.suppress_all
      
      
      NearField.unsuppress_all
      
      
      NearField.update_expressions_with_defaults
      
      
      NearField.update_property
      
      
      NearField.update_trace_in_report
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      NearField.children
      NearField.command
      NearField.differential_pairs
      NearField.display_families_options
      NearField.display_families_type
      NearField.domain
      NearField.expressions
      NearField.internal_plot_name
      NearField.limit_lines
      NearField.matrix
      NearField.near_field
      NearField.notes
      NearField.plot_name
      NearField.polyline
      NearField.primary_sweep
      NearField.primary_sweep_range
      NearField.properties
      NearField.public_dir
      NearField.reduced_matrix
      NearField.report_category
      NearField.report_type
      NearField.secondary_sweep
      NearField.secondary_sweep_range
      NearField.traces
      NearField.use_pulse_in_tdr
      NearField.variations
   
   